--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">PDF Reader Lite</string>
-    <string name="banner_ad_unit_id">ca-app-pub-6096748449570125/7263975526</string>
+    <string name="banner_ad_unit_id">Enter your own Banner ad Unit</string>
     <string name="file_name">File name</string>
 </resources>
